Video 10 changes - paging for list loading optimization (loan service and controller)